# qnlp

./: CITATION.cff  DATASET_CARD.md  LICENSE_NOTICE.md  MANIFEST.in  MANUSCRIPT_TEXT.md  README.md  REVIEWER_RESPONSE.md  annotation_guidelines.md  corpus_statistics.csv  model_card_gpt.md  model_card_ner.md  model_card_qa.md  requirements.txt  sample_data.jsonl  schema.json  setup.cfg  setup.py  source_manifest.csv  split_statistics.csv  validate_release.py
qaznlp/kaznlp-4.0-gpt-fixed/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  demo.ipynb  index.html  input.txt  ner_demo.ipynb  requirements.txt
qaznlp/kaznlp-4.0-gpt-fixed/data/: dataset.tsv  example_coref.jsonl  example_ner.jsonl  example_qa.jsonl  example_srl.jsonl  kazakh_corpus.txt
qaznlp/kaznlp-4.0-gpt-fixed/docs/: index.rst  modules.rst
qaznlp/kaznlp-4.0-gpt-fixed/ml/: train_data.tsv
qaznlp/kaznlp-4.0-gpt-fixed/notebooks/: kazgpt_demo.ipynb  ner_parser_viz.ipynb
qaznlp/kaznlp-4.0-gpt-fixed/templates/: annotator.html  demo.html  dependency.html  dependency_tree.html  index.html  morpheme_tree.html  morphemes.html  tag.html  verb_form.html
qaznlp/notebooks/: __init__.py
qaznlp/scripts/: __init__.py  eval.py  export_onnx.py  train.py
qaznlp/train/: __init__.py  train_enhanced_ner.py  train_gpt.py  train_multitask.py  train_ner.py  train_pos_tagger.py
