[metadata]
name = qaznlp
version = 4.0.0
author = Aigerim
description = QazNLP: Full-featured NLP suite for Kazakh language
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
include_package_data = true
install_requires =
    transformers>=4.37.2
    torch>=1.13.1
    flask>=2.1.0
    flasgger>=0.9.5
    tokenizers>=0.13.3
    sentencepiece>=0.1.99
    tqdm>=4.64.1
    scikit-learn>=1.1.2
    numpy>=1.23.5
    pandas>=1.4.4
    onnx>=1.12.0
    onnxruntime>=1.14.1

[options.packages.find]
exclude =
    tests*
    examples*